--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-A clone of the classic Tron game.
+A clone of the classic Tron game, made using Love2D.
 Survive for as long as possible by avoiding light trails and the screen edges.
 
 Controls:
