--- a/README
+++ b/README
@@ -1,10 +1,16 @@
+**Description**
+
 A clone of the classic Tron game, made using Love2D.
 Survive for as long as possible by avoiding light trails and the screen edges.
 
-Controls:
+**Controls**
 
-WASD - Move red player
-Arrow keys - Move blue player
+WASD - *Move red player*
+Arrow keys - *Move blue player*
 
-R - Restart game when a player loses
-Esc - Quit game
+R - *Restart game when a player loses*
+Esc - *Quit game*
+
+**License**
+
+Feel free to edit, redistribute, claim credit for or do whatever with this code.
